test/must_fail/api/must_fail_exit_many_args.ngjs
#!/usr/bin/env ngspicejs
// Exit too many args
// linter: ngspicejs-lint
"use strict";

exit(1, 2);
